# nt

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  DESIGN.md  README.md
.github/workflows/: ci.yml
docs/: cli-contract.md  daemon-protocol.md  storage-format.md
go/: .golangci.yml  README.md  go.mod  main.go  main_test.go
py/: README.md  pyproject.toml
py/src/nt/: __main__.py
tests/: conftest.py  test_smoke.py
