[project]
name = "nt"
version = "0.1.0"
description = "Minimalist CLI memory aid for in-flight work."
readme = "README.md"
requires-python = ">=3.14"
license = { text = "MIT" }
authors = [{ name = "nt contributors" }]
dependencies = []

[project.scripts]
nt = "nt.__main__:main"

[dependency-groups]
dev = ["pytest"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/nt"]