[project]
name = "nt"
version = "0.1.0"
description = "Minimalist CLI memory aid for in-flight work."
readme = "README.md"
requires-python = ">=3.14"
license = { text = "MIT" }
authors = [{ name = "nt contributors" }]
dependencies = []

[project.scripts]
nt = "nt.__main__:main"

[dependency-groups]
dev = [
    "pytest",
    "pre-commit",
    "ruff>=0.15",
    "ty>=0.0.56",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/nt"]

[tool.ruff]
target-version = "py314"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.ty.environment]
python-version = "3.14"
